add routes for bookCollections
