# src/dto/bookCollection.dto.ts
@@ -1,3 +1,8 @@
-export interface BookCollectionDTO {
+import { BookDTO} from "./book.dto";
 
+export interface BookCollectionDTO {
+    id?: number;
+    book?: BookDTO;
+    available: boolean;
+    state: number;
 }
